# csc-group

./: presentation.typ
system/backend/: Cargo.toml
system/backend/migrations/: 20240908200027_setup_database.sql  20240909181419_add_maintenances,_fuel_and_incidents_table.sql
system/backend/src/: errors.rs  main.rs
system/backend/src/routes/: dashboard.rs  mod.rs  populate_db.rs
system/backend/src/routes/manufacturers/: create.rs  delete.rs  list.rs  mod.rs
system/backend/src/routes/vehicle_models/: create.rs  delete.rs  list.rs  mod.rs
system/backend/src/routes/vehicles/: create.rs  list.rs  mod.rs
system/frontend/: package.json  pnpm-lock.yaml
system/frontend/src/: App.tsx  index.css
system/frontend/src/components/: header.tsx
system/frontend/src/components/ui/: alert-dialog.tsx
system/frontend/src/lib/server/: dashboard.ts  index.ts  manufacturers.ts  models.ts  vehicles-models.ts  vehicles.ts
system/frontend/src/pages/dashboard/: index.tsx
system/frontend/src/pages/home/: index.tsx  nav-button.tsx
system/frontend/src/pages/manufacturer/: index.tsx
system/frontend/src/pages/manufacturer/new/: index.tsx
system/frontend/src/pages/vehicle-models/: index.tsx
system/frontend/src/pages/vehicle-models/new/: index.tsx
system/frontend/src/pages/vehicles/: index.tsx  vehicle-card.tsx
system/frontend/src/pages/vehicles/new/: index.tsx
